<?xml version="1.0"?>
<package format="2">
  <name>python_executables</name>
  <version>0.0.0</version>
  <description>The python_executables package</description>

  <maintainer email="p.tomas.pts@gmail.com">Pedro Tomás</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>
